--- a/main.css
+++ b/main.css
@@ -494,3 +494,70 @@ body {
 
 
 /* FOOTER END */
+
+
+
+
+/* MEDIA Q */
+
+@media (max-width: 768px) {
+    .auto-mid {
+        width: 100%;
+    }
+
+    .header {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .header nav ul {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 70px;
+        left: 0;
+        width: 100%;
+        background-color: #fff;
+        padding: 10px 0;
+    }
+
+    .header li {
+        margin: 10px 0;
+        text-align: center;
+    }
+
+    .burger-menu {
+        display: flex;
+        flex-direction: column;
+        cursor: pointer;
+    }
+
+    .burger-menu span {
+        height: 3px;
+        width: 25px;
+        background-color: #000;
+        margin: 4px 0;
+        transition: 0.3s;
+    }
+
+    .header.open nav ul {
+        display: flex;
+    }
+    
+    /* мини-анимация */
+    .burger-menu.open span:nth-child(1) {
+        transform: rotate(45deg) translate(5px,5px);
+    }
+
+    .burger-menu.open span:nth-child(2) {
+        opacity: 0;
+    }
+
+    .burger-menu.open span:nth-child(3) {
+        transform: rotate(-45deg) translate(5px,-5px);
+    }
+    
+
+
+    
+}
