--- a/main.css
+++ b/main.css
@@ -556,7 +556,61 @@ body {
     .burger-menu.open span:nth-child(3) {
         transform: rotate(-45deg) translate(5px,-5px);
     }
-    
+
+
+    /* end media_header */
+
+
+
+    .first-section {
+        flex-direction: column;
+        align-items: center;
+        padding: 40px 20px;
+        text-align: center;
+    }
+
+    .first-section .cris-element,
+    .first-section .hemsworth-element,
+    .first-section .cris-img {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+
+    .cris-element h1 {
+        font-size: 72px;
+    }
+    .cris-element h3 {
+        margin-bottom: 20px;
+        font-size: 24px;
+    }
+    .cris-element a {
+        font-size: 16px;
+        padding: 8px 18px;
+    }
+
+    .cris-img img {
+        width: 100%;
+        max-width: 300px;
+        border-radius: 150px;
+        margin-top: 20px;
+    }
+
+    .hemsworth-element h2  {
+        font-size: 48px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    .hemsworth-element p {
+        font-size: 16px;
+        margin-bottom: 20px;
+    }
+
+    .hemsworth-element a {
+        font-size: 16px;
+        padding: 8px 24px;
+    }
 
 
     
