--- a/main.css
+++ b/main.css
@@ -32,6 +32,10 @@ body {
     border-bottom: 1px solid #000;
 }
 
+.burger-menu {
+    display: none;
+}
+
 .header ul {
     list-style: none;
     display: flex;
